initiated bag of words

--- a/SMS_spam_Detection.ipynb
+++ b/SMS_spam_Detection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import csv\n",
-    "import textblob\n",
+    "from textblob import TextBlob\n",
     "import sklearn\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -193,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6de5ed9f60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7eff175514e0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -275,18 +275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7f6de589aa90>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7f6de57e2470>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7eff44246438>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7eff1702f470>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -306,6 +306,46 @@
    "source": [
     "#Is there any difference in the length of messages between Spam and Ham\n",
     "messages.hist(column=\"length\", by=\"label\", bins=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data Preprocessing\n",
+    "# Here we will map the words into vectors\n",
+    "#We will use an Natural Language Processing Technique to map the words i.e we will use the [bag-of-words] to represent each unique character by 1 number.\n",
+    "\n",
+    "#First we write a function that splits the message to individual words\n",
+    "def split_into_tokens(message):\n",
+    "    return TextBlob(message).words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenized messages: \n",
+      "0    [Go, until, jurong, point, crazy, Available, o...\n",
+      "1                       [Ok, lar, Joking, wif, u, oni]\n",
+      "2    [Free, entry, in, 2, a, wkly, comp, to, win, F...\n",
+      "3    [U, dun, say, so, early, hor, U, c, already, t...\n",
+      "4    [Nah, I, do, n't, think, he, goes, to, usf, he...\n",
+      "Name: message, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Here are the bagged words or tokenized words\n",
+    "print(\"Tokenized messages: \")\n",
+    "print(messages.message.head().apply(split_into_tokens))"
    ]
   }
  ],
