lemmatization and data-to-vector-conversion

--- a/SMS_spam_Detection.ipynb
+++ b/SMS_spam_Detection.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#              Naive Bayes SMS Spam Detection(Machine Learning)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <h3>Import the neccessary Libraries</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -193,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7eff175514e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fdc3a011ac8>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -275,18 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7eff44246438>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7eff1702f470>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x7fdc39d1c978>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x7fdc39caae10>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -310,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +354,98 @@
     "print(\"Tokenized messages: \")\n",
     "print(messages.message.head().apply(split_into_tokens))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word, Part of speech POS tag for sentence 'Hello world, how is it going?' :\n",
+      "\n",
+      "[('Hello', 'NNP'), ('world', 'NN'), ('how', 'WRB'), ('is', 'VBZ'), ('it', 'PRP'), ('going', 'VBG')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Now we have the following NLP questions:\n",
+    "\n",
+    "#1. Do the Capital letters carry information\n",
+    "#2. Does distinguishing inflected form \"goes\" vs \"go\" carry information?\n",
+    "#3. Do interjections determiners carry infromation?\n",
+    "\n",
+    "#In other words we want to better normalize the text\n",
+    "# With TextBlob we will detect part of speech (POS) tags with:\n",
+    "print(\"Word, Part of speech POS tag for sentence 'Hello world, how is it going?' :\\n\")\n",
+    "print(TextBlob(\"Hello world, how is it going?\").tags)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After lemmatization the messages are: \n",
+      "\n",
+      "0    [Go, until, jurong, point, crazy, Available, o...\n",
+      "1                       [Ok, lar, Joking, wif, u, oni]\n",
+      "2    [Free, entry, in, 2, a, wkly, comp, to, win, F...\n",
+      "3    [U, dun, say, so, early, hor, U, c, already, t...\n",
+      "4    [Nah, I, do, n't, think, he, go, to, usf, he, ...\n",
+      "Name: message, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Let us now normalize the words into their base form using lemmas\n",
+    "\n",
+    "def split_into_lemmas(message):\n",
+    "    words = TextBlob(message).words\n",
+    "    return [word.lemma for word in words]\n",
+    "print(\"After lemmatization the messages are: \\n\")\n",
+    "print(messages.message.head().apply(split_into_lemmas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data to vectors - convert the messages to a matrix of token counts: \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Data to vector conversion\n",
+    "\n",
+    "#Now here we convert each message , represented as a token to vectors so that the ML model could understand\n",
+    " #Doing that requires three steps:\n",
+    "    #1. Counting how many times does a word occurs in a message(term frequency)\n",
+    "    #2. Weighing the counts so that frequently occuring words get a lower weight (inverse document frequency idf)\n",
+    "    #- in order to eliminate common words like \"is\", \"the\", \"and\" etc.,\n",
+    "    #3. normalizing the vectors to unit length to abstract from the original text\n",
+    "    \n",
+    "print(\"Data to vectors - convert the messages to a matrix of token counts: \")\n",
+    "dov_transformer = CountVectorizer(analyzer=split_into_lemmas).fit(messages.message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
