converted all the data to vector i.e matrix

--- a/SMS_spam_Detection.ipynb
+++ b/SMS_spam_Detection.ipynb
@@ -442,6 +442,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Take one particular message: \n",
+      "\n",
+      "U dun say so early hor... U c already then say...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Take one particular message: \\n\")\n",
+    "message4 = messages[\"message\"][3]\n",
+    "print(message4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After bag of words and conversion to vector, the above message looks lik this :\n",
+      "  (0, 4189)\t2\n",
+      "  (0, 4762)\t1\n",
+      "  (0, 5363)\t1\n",
+      "  (0, 6219)\t1\n",
+      "  (0, 6243)\t1\n",
+      "  (0, 7137)\t1\n",
+      "  (0, 9280)\t2\n",
+      "  (0, 9589)\t1\n",
+      "  (0, 10054)\t1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Using the newly created dov_transformer to view bag-of-words counts as a vector\n",
+    "print(\"After bag of words and conversion to vector, the above message looks lik this :\")\n",
+    "dov4 = dov_transformer.transform([message4])\n",
+    "print(dov4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the bag of words:\n",
+      "(1, 11010)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape of the bag of words:\")\n",
+    "print(dov4.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sanity check: Words that appear twice: \n",
+      "U\n",
+      "say\n"
+     ]
+    }
+   ],
+   "source": [
+    "# So there are nine unique words, 2 of them appear twice and rest appears only once in the above message.\n",
+    "# Sanity check: what are these words that appear twice\n",
+    "\n",
+    "print(\"Sanity check: Words that appear twice: \")\n",
+    "print(dov_transformer.get_feature_names()[4189])\n",
+    "print(dov_transformer.get_feature_names()[9280])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the bag of words transformer, transforming all the messages: \n",
+      "Sparse matrix shape:  (5574, 11010)\n",
+      "Number of non zeroes:  81623\n",
+      "sparsity: 0.13%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#The bag-of-words counts for the entire SMS corpus is large, so sparse matrix\n",
+    "print(\"Using the bag of words transformer, transforming all the messages: \")\n",
+    "messages_dov = dov_transformer.transform(messages[\"message\"])\n",
+    "print(\"Sparse matrix shape: \", messages_dov.shape)\n",
+    "print(\"Number of non zeroes: \", messages_dov.nnz)\n",
+    "print ('sparsity: %.2f%%' % (100.0 * messages_dov.nnz / (messages_dov.shape[0] * messages_dov.shape[1])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
