TfIdf transformation done

--- a/SMS_spam_Detection.ipynb
+++ b/SMS_spam_Detection.ipynb
@@ -560,10 +560,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now perform TFIDF fit and transform\n",
+      "After TFIDF fit and transformation, above text message :\n",
+      "\n",
+      "  (0, 10054)\t0.22510385070095637\n",
+      "  (0, 9589)\t0.1955442748962185\n",
+      "  (0, 9280)\t0.49597495370832545\n",
+      "  (0, 7137)\t0.4269339327922034\n",
+      "  (0, 6243)\t0.3100112284407115\n",
+      "  (0, 6219)\t0.2913528957227454\n",
+      "  (0, 5363)\t0.2860779240943588\n",
+      "  (0, 4762)\t0.25892595706356525\n",
+      "  (0, 4189)\t0.391088549792437\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# And finally, after the counting, the term weighting and normalization can be done with [TF-IDF]\n",
+    "# using scikit-learn's `TfidfTransformer`:\n",
+    "print(\"Now perform TFIDF fit and transform\")\n",
+    "tfidf_transformer = TfidfTransformer().fit(messages_dov)\n",
+    "tfidf4 = tfidf_transformer.transform(dov4)\n",
+    "print(\"After TFIDF fit and transformation, above text message :\")\n",
+    "print()\n",
+    "print (tfidf4)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
